hard-gists/3719535/run.log
=== Docker Run Log for 3719535 ===
Started at: Mi 29. Okt 13:57:31 CET 2025

[2025-10-29 13:57:31] START: Running container for 3719535
[2025-10-29 13:57:31] SUCCESS: Container a82b8868550e7950b079f5c6dd62ed3216b72b7dbf9927fdb496786d5bd1975a started for 3719535
=== Container logs for 3719535 ===
  File "/snippet.py", line 30
    print "Downloaded : %s(%s)" % r
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3719535 ===
[2025-10-29 13:57:33] INFO: Container a82b8868550e7950b079f5c6dd62ed3216b72b7dbf9927fdb496786d5bd1975a has stopped
